repo/fleet/overlays/virtualservice/clickhouse.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: clickhouse
  namespace: io
spec:
  hosts:
  - clickhouse.renlm.cn
  gateways:
  - istio-system/istio-gateway
  tcp:
  - match:
    - port: 8123
    route:
    - weight: 100
      destination:
        host: clickhouse
        port:
          number: 8123
  http:
  - match:
    - port: 80
    - port: 443
    route:
    - weight: 100
      destination:
        host: clickhouse
        port:
          number: 8123
