repo/fleet/overlays/virtualservice/eureka-server.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: eureka-server
spec:
  hosts:
  - otel.renlm.cn
  gateways:
  - istio-system/istio-gateway
  http:
  - match:
    - port: 80
    - port: 443
    route:
    - weight: 100
      destination:
        host: core-web
        port:
          number: 80
