repo/fleet/overlays/virtualservice/gateway.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: gateway
spec:
  hosts:
  - gw.renlm.cn
  gateways:
  - istio-system/istio-gateway
  http:
  - match:
    - port: 80
    - port: 443
    route:
    - weight: 100
      destination:
        host: gateway
        port:
          number: 80
