repo/fleet/overlays/virtualservice/grafana.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: grafana
  namespace: istio-system
spec:
  hosts:
  - grafana.renlm.cn
  gateways:
  - istio-gateway
  http:
  - match:
    - port: 80
    - port: 443
    route:
    - weight: 100
      destination:
        host: grafana
        port:
          number: 3000
