repo/fleet/overlays/virtualservice/jenkins.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: jenkins
  namespace: io
spec:
  hosts:
  - jenkins.renlm.cn
  gateways:
  - istio-system/istio-gateway
  http:
  - match:
    - port: 80
    - port: 443
    route:
    - weight: 100
      destination:
        host: jenkins
        port:
          number: 8080
