repo/fleet/overlays/virtualservice/mygraph.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: mygraph
spec:
  hosts:
  - mygraph.renlm.cn
  gateways:
  - istio-system/istio-gateway
  http:
  - match:
    - port: 80
    - port: 443
    route:
    - weight: 100
      destination:
        host: mygraph
        port:
          number: 80
