repo/fleet/overlays/virtualservice/mysql.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: mysql
  namespace: io
spec:
  hosts:
  - mysql.io
  gateways:
  - istio-system/istio-gateway
  tcp:
  - match:
    - port: 3306
    route:
    - weight: 100
      destination:
        host: mysql
        port:
          number: 3306
