repo/fleet/overlays/virtualservice/nginx.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: nginx
spec:
  hosts:
  - renlm.cn
  gateways:
  - istio-system/istio-gateway
  http:
  - match:
    - port: 80
    - port: 443
    route:
    - weight: 100
      destination:
        host: nginx
        port:
          number: 80
