repo/fleet/overlays/virtualservice/postgres.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: postgres
spec:
  hosts:
  - postgres.io
  gateways:
  - istio-system/istio-gateway
  tcp:
  - match:
    - port: 5432
    route:
    - weight: 100
      destination:
        host: postgres
        port:
          number: 5432
