repo/fleet/overlays/virtualservice/rabbitmq.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: rabbitmq
spec:
  hosts:
  - rabbitmq.renlm.cn
  gateways:
  - istio-system/istio-gateway
  tcp:
  - match:
    - port: 5672
    route:
    - weight: 100
      destination:
        host: rabbitmq
        port:
          number: 5672
  http:
  - match:
    - port: 80
    - port: 443
    route:
    - weight: 100
      destination:
        host: rabbitmq
        port:
          number: 15672
