repo/fleet/overlays/virtualservice/redis.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: redis
  namespace: io
spec:
  hosts:
  - redis.io
  gateways:
  - istio-system/istio-gateway
  tcp:
  - match:
    - port: 6379
    route:
    - weight: 100
      destination:
        host: redis
        port:
          number: 6379
